fixing css jump

--- a/client/static/main.css
+++ b/client/static/main.css
@@ -29,7 +29,7 @@ body{
   }
 
   h1{
-      padding-top: 1.5em;
+      padding-top: 0;
       font-size: 4em;
   }
 
@@ -38,13 +38,13 @@ body{
       padding: 0;
   }
 
-  .lds-ring {
+  .loading {
     display: inline-block;
     position: relative;
     width: 25em;
     height: 25em;
   }
-  .lds-ring div {
+  .loading div {
     box-sizing: border-box;
     display: block;
     position: absolute;
@@ -55,13 +55,13 @@ body{
     animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
     border-color: #fff transparent transparent transparent;
   }
-  .lds-ring div:nth-child(1) {
+  .loading div:nth-child(1) {
     animation-delay: -0.45s;
   }
-  .lds-ring div:nth-child(2) {
+  .loading div:nth-child(2) {
     animation-delay: -0.3s;
   }
-  .lds-ring div:nth-child(3) {
+  .loading div:nth-child(3) {
     animation-delay: -0.15s;
   }
   @keyframes lds-ring {
@@ -71,4 +71,13 @@ body{
     100% {
       transform: rotate(360deg);
     }
+  }
+
+  .displaying{
+      border: 6px solid transparent;
+      border-radius: 50%;
+      height: 25em;
+      width: 25em;
+      margin: -6px;
+
   }
